--- a/.github/workflows/deploy-ps-module-to-storage-account.yml
+++ b/.github/workflows/deploy-ps-module-to-storage-account.yml
@@ -42,9 +42,17 @@ jobs:
 
             $moduleDirs
 
+
             foreach ($moduleDir in $moduleDirs) {
+
+                write-output "fullname"
+                
+                $moduleDir.FullName
+
                 # Find the .psd1 file in the module directory
                 $psd1File = Get-ChildItem -Path $moduleDir.FullName -Include *.psd1 -File
+
+
                 if ($null -eq $psd1File) {
                     throw "No .psd1 file found in module directory '$($moduleDir.FullName)'."
                 }
