--- a/.github/workflows/deploy-ps-module-to-storage-account.yml
+++ b/.github/workflows/deploy-ps-module-to-storage-account.yml
@@ -26,6 +26,7 @@ jobs:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          enable-AzPSSession: true
 
       - name: Run Azure PowerShell inline script
         uses: azure/powershell@v2
