--- a/.github/workflows/deploy-ps-module-to-storage-account.yml
+++ b/.github/workflows/deploy-ps-module-to-storage-account.yml
@@ -71,7 +71,7 @@ jobs:
 
                 # Upload files for this module, maintaining directory structure
                 foreach ($file in $files) {
-                    $relativePath = $file.FullName.Substring($sourcePath.Length + 1).Replace("\", "/")
+                    $relativePath = ($file.FullName -split('$moduleDir.Name'))[1]
                     $uploadPath = "$versionedPath/$relativePath"
                     Write-Output "Uploading $uploadPath..."
                     Set-AzStorageBlobContent -File $file.FullName -Container $containerName -Blob $uploadPath -Context $storageContext -Force | Out-Null
