--- a/.github/workflows/deploy-ps-module-to-storage-account.yml
+++ b/.github/workflows/deploy-ps-module-to-storage-account.yml
@@ -72,7 +72,7 @@ jobs:
                 # Upload files for this module, maintaining directory structure.  Extract the filenames from the module name part of the path (...\moduleName\folder\file.ps1 -> folder\file.ps1).
                 foreach ($file in $files) {
 
-                    #standardise slashes
+                    # Standardise slashes
                     $filepath = $file.FullName -replace('\\','/')
                     $relativePath = ($file.FullName -split("$($moduleDir.Name)/"))[1]
                     $uploadPath = "$versionedPath/$relativePath"
